# Vimtelligence

./: Cargo.toml  README.md  install.js  package.json
.github/workflows/: release.yml
src/: gui_main.rs  lib.rs  main.rs
src/ai/: mod.rs
src/editor/: mod.rs
src/input/: debouncer.rs  egui_compat.rs  mod.rs  parser.rs
src/syntax/: mod.rs
src/ui/: mod.rs
