[package]
name = "vimtelligence"
version = "0.1.9"
edition = "2021"
description = "An ultra-high-performance modal terminal text editor with local AI acceleration"
repository = "https://github.com/turtle170/Vimtelligence"
license = "Apache-2.0"

[[bin]]
name = "vimtelligence"
path = "src/main.rs"

[[bin]]
name = "vimtelligence-gui"
path = "src/gui_main.rs"

[dependencies]
crossterm = { version = "0.27", features = ["event-stream"] }
ratatui = "0.26"
tokio = { version = "1.37", features = ["full"] }
anyhow = "1.0"
kalosm = { version = "0.3.1", features = ["language"] }
eframe = "0.27"
egui = "0.27"
ropey = "1.6"
futures = "0.3"
half = "=2.3.1"
tree-sitter = "0.26.9"
tree-sitter-highlight = "0.26.9"
tree-sitter-language-pack = "1.8.1"
